Added Installation info to README.md