@@ -2,3 +2,17 @@
 
 
 by Steven Dodson
+
+
+### Installation
+
+1. Clone this project by typing the following command in bash: 'git clone https://github.com/stevendodson/NonogramPlayer.git'
+2. Import the project in any Java IDE
+3. Run the application
+
+The program can also be run from the command line using the JAR file. to do this, use the following command while in the 'dist' directory: 'java --module-path "path-to-javafx-lib-folder" --add-modules javafx.controls,javafx.fxml -jar App.jar'
+
+For example, 
+'''
+$ java --module-path "/home/steven/Programs/javafx/javafx-sdk-17.0.2/lib" --add-modules javafx.controls,javafx.fxml -jar App.jar
+'''
